--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="stylesheet.css" rel="stylesheet">
     </head>
     <body>
-        <header>
+        <header class="sticky-top">
             <a href="#">
                 <img src="Images/flpklogo.png" alt="Flipkart">
             </a>
@@ -21,7 +21,6 @@
             
         </header>
         <div class="slid">
-            <div class="slid">
             <div id="change" class="carousel slide" data-bs-ride="true">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#change" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -439,5 +438,4 @@
                 </div>
               </div>
     </body>
-                    
 </html>
