--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="stylesheet.css" rel="stylesheet">
     </head>
     <body>
-        <header>
+        <header class="sticky-top">
             <a href="#">
                 <img src="Images/flpklogo.png" alt="Flipkart">
             </a>
@@ -23,14 +23,14 @@
         <div class="slid">
             <div id="change" class="carousel slide" data-bs-ride="true">
                 <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#change" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#change" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#change" data-bs-slide-to="1" aria-label="Slide 2"></button>
                   <button type="button" data-bs-target="#change" data-bs-slide-to="2" aria-label="Slide 3"></button>
                   <button type="button" data-bs-target="#change" data-bs-slide-to="3" aria-label="Slide 4"></button>
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="Images/slider1.webp" class="d-block w-100" alt="sale">
+                    <img src="images/slider1.webp" class="d-block w-100" alt="sale">
                   </div>
                   <div class="carousel-item">
                     <img src="images/slider2.webp" class="d-block w-100" alt="sale">
