--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/slider1.webp" class="d-block w-100" alt="sale">
+                    <img src="Images/slider1.webp" class="d-block w-100" alt="sale">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/slider2.webp" class="d-block w-100" alt="sale">
+                    <img src="Images/slider2.webp" class="d-block w-100" alt="sale">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/slider3.webp" class="d-block w-100" alt="sale">
+                    <img src="Images/slider3.webp" class="d-block w-100" alt="sale">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/slider4.webp" class="d-block w-100" alt="sale">
+                    <img src="Images/slider4.webp" class="d-block w-100" alt="sale">
                   </div>
                 </div>
                 <button class="carousel-control-prev control" type="button" data-bs-target="#change" data-bs-slide="prev">
