--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
         <link href="Images/fliplogo.ico" rel="icon">
-        <link href="samplestylesheet.css" rel="stylesheet">
+        <link href="stylesheet.css" rel="stylesheet">
         <script src="script.js"></script>
         <!-- owl corousel cdns -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
